SCRIB 1016 float left on avatar to fix post alignment

--- a/styles/SLRecentPostsStylesv1.css
+++ b/styles/SLRecentPostsStylesv1.css
@@ -61,3 +61,7 @@ clear: both;
 ul.SL-Posts >li:nth-child(odd) {
 background: #F8F8F8;
 }
+
+ul.SL-Posts img {
+    float:left;
+}
